2003-12-02 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslElement.cs, XslCopy.cs, XslCopyOf.cs, XslLiteralElement.cs :
	  Modified cdata-section-elements handling.
	* XslAttribute.cs, XslElement.cs : Fixed incorrect prefix handling.
	* XslComment.cs : In case of empty value, don't call value.Evaluate().
	* XslCopyOf.cs : Element node should consider cdata-section elements.

2003-11-28 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCopy.cs, XslCopyOf.cs : namespace nodes should be written.

2003-11-24 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslAttribute.cs, XslElement.cs, XslLiteralElement.cs :
	  More precise namespace handling.
	* XslCopy.cs, XslElement.cs, XslLiteralElement.cs :
	  Added cdata-section-elements support.
	* XslNumber.cs :
	  Cases when value is NodeSet should be allowed.
	  Default output should be 1,2,3... not exception. see XSLT spec 7.7.1

2003-11-21 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslAttribute.cs : Name verification.
	* XslElement.cs : Name verification. Consider IsEmptyElement.
	* XslCopy.cs : copy namespace nodes too.

2003-11-09 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslAttribute.cs : namespace should be String.Empty if no specification
	  exists.
	* XslNumber.cs : default format string is "1". See XSLT spec. 7.7.1.

2003-11-03 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCompiledElement.cs, XslAttribute.cs, XslElement.cs :
	  Removed Clone() everywhere. Limited only to required places.

2003-11-02 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCompiledElement.cs : Added InputNode for namespace-prefix support.
	* XslAttribute.cs, XslElement.cs, XslLiteralElement.cs :
	  Correct Prefix support.
	* XslLiteralElement.cs : Moved xmlns output after attribute sets.
	* XslCopy.cs : Added use-attribute-sets support for Root XPath type.
	* XslCopy.cs, XslCopyOf.cs, XslLiteralElement.cs : Support for
	  IsEmptyElement (XslElement not yet. confirm what OASIS tests expect).
	* XslCopy.cs, XslElement.cs, XslLiteralElement.cs : 